--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  max-height: 1117px;
+  height: 1117px;
   width: 100%;
   
 }
